<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context="com.transporte.cicese.transportaciones_cicese.RegistroChoferActivity">

    <TextView
        android:id="@+id/textViewRC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/capture_los_siguientes_datos"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="16dp" />


    <EditText
        android:id="@+id/numeroEmpleado"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:background="@drawable/border_style"
        android:ems="10"
        android:hint="@string/n_mero_de_empleado"
        android:inputType="number"
        android:layout_below="@+id/textViewRC"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/contrasenaChofer"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/numeroEmpleado"
        android:layout_alignStart="@+id/numeroEmpleado"
        android:layout_below="@+id/numeroEmpleado"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_style"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/contrase_aChofer"
        android:inputType="textWebPassword" />


    <EditText
        android:id="@+id/nombreChofer"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/border_style"
        android:hint="@string/nombre"
        android:inputType="text"
        android:layout_below="@+id/contrasenaChofer"
        android:layout_alignStart="@+id/contrasenaChofer"
        android:layout_alignEnd="@+id/contrasenaChofer" />


    <EditText
        android:id="@+id/aPaternoChofer"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/border_style"
        android:hint="@string/apellido_paterno"
        android:inputType="text"
        android:layout_below="@+id/nombreChofer"
        android:layout_alignStart="@+id/nombreChofer"
        android:layout_alignEnd="@+id/nombreChofer" />

    <EditText
        android:id="@+id/aMaternoChofer"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/border_style"
        android:hint="@string/apellido_materno"
        android:inputType="text"
        android:layout_below="@+id/aPaternoChofer"
        android:layout_alignStart="@+id/aPaternoChofer"
        android:layout_alignEnd="@+id/aPaternoChofer" />

    <EditText
        android:id="@+id/telefonoChofer"
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="40dp"
        android:hint="@string/tel_fono"
        android:ems="10"
        android:background="@drawable/border_style"
        android:inputType="phone"
        android:layout_below="@+id/aMaternoChofer"
        android:layout_alignStart="@+id/aMaternoChofer"
        android:layout_alignEnd="@+id/aMaternoChofer" />

    <TextView
        android:id="@+id/camposObligatorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/telefonoChofer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="Asegurese que todos los datos sean correctos"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/registroChofer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/telefonoChofer"
        android:layout_alignStart="@+id/telefonoChofer"
        android:layout_below="@+id/camposObligatorios"
        android:layout_marginTop="12dp"
        android:background="@drawable/secondary_button_style"
        android:text="@string/aceptar"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
